src/scss/components/_homepage.scss
.btn-home {
  background-color: white;
  color: #54b1c8;
}

.btn.btn-home span.fa {
  background-color: #54b1c8;
  color: white;
}

.btn-home:hover {
  background-color: #54b1c8;
  color: white;
}

.btn.btn-home:hover span.fa {
  background-color: white;
  color: #54b1c8;
}

html {
  height: 100%;
}

body.index {
  height: 100%;
  background: #55b1c8;
  background: url('/images/background.png') no-repeat center center fixed;
  background-size: cover;
}

.index {

  .header,
  .offline-ui {
    display: none;
  }

  #contactsid-app-view-wrapper {
    display: table;
    width: 100%;
    height: 100%; /* For at least Firefox */
    min-height: 100%;
  }

  #contactsid-app {
    display: table-cell;
    vertical-align: top;
  }

  #contactsid-app-view {
    margin-right: auto;
    margin-left: auto;
  }

  #logo {
    width: 100%; /* Firefox fix */
  }

  .container .login {
    background: #79CFDF;
    border-radius: 15px;
    box-shadow: 0 0 15px #333;
    -moz-box-shadow: 0 0 15px #333;
    padding: 30px;
    margin-top: 0;
  }

  #video {
    width: 100%;
    height: 240px;
  }

  footer .navbar {
    background-color: #2B5D82;
    border-top: 3px solid #54889A;
 }

  footer .navbar-inverse .navbar-nav > li > a {
    color: #54b1c8;
  }

  @media (min-width: 768px) {

    #contactsid-app {
      vertical-align: middle;
    }

    #contactsid-app-view {
      width: 100%;
    }
    
  }

  @media (min-width: 990px) {
    #mobile {
      margin-top: 160px;
    }
  }

  @media (min-width: 1200px) {
    #mobile {
      margin-top: 150px;
    }
  }

}

